src/objects/Comentario_especialista__c.object
<CustomObject>
    <description>Garantizar el seguimiento de los especialistas de producto de las divisiones y el staff central a las oportunidades de la Banca de Empresas y Gobierno, generando un historial de interacción directa entre el ejecutivo y el especialista.</description>
    <fields>
        <fullName>Comentario__c</fullName>
        <description>Comentario del especialista.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentario</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Fórmula que obtiene la división del especialista.</description>
        <formula>TEXT(CreatedBy.Divisi_n__c )</formula>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <description>Oportunidad a la que pertenece el comentario.</description>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comentarios Especialista</relationshipLabel>
        <relationshipName>Comentarios_Especialista</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prioridad__c</fullName>
        <description>Lista de selección para elegir prioridad alta, media o baja.</description>
        <label>Prioridad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario_Oportunidad__c</fullName>
        <description>Propietario de la oportunidad.</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Propietario Oportunidad</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comentarios_del_especialista</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comentario del especialista</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asunto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comentarios del especialista</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>